{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 11,
  "lineage": "c7b3d41d-8fa2-518c-8aff-d6beb632f432",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa5f86a0bf7dc4c3",
            "arn": "arn:aws:ec2:us-east-1:720560202424:elastic-ip/eipalloc-0fa5f86a0bf7dc4c3",
            "domain": "vpc",
            "id": "eipalloc-0fa5f86a0bf7dc4c3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-19-92-3.compute-1.amazonaws.com",
            "public_ip": "50.19.92.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "magnolia-dev-nat-eip"
            },
            "tags_all": {
              "Name": "magnolia-dev-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.magnolia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720560202424:internet-gateway/igw-038aa12432af4f1ae",
            "id": "igw-038aa12432af4f1ae",
            "owner_id": "720560202424",
            "tags": {
              "Environment": "dev",
              "Name": "magnolia-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "magnolia-dev-igw"
            },
            "vpc_id": "vpc-0a99a95b00a1357b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magnolia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-038aa12432af4f1ae",
            "id": "r-rtb-00f702046df7eb0b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f702046df7eb0b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.magnolia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720560202424:route-table/rtb-0ca34958c85c6d092",
            "id": "rtb-0ca34958c85c6d092",
            "owner_id": "720560202424",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "magnolia-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "magnolia-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a99a95b00a1357b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.magnolia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720560202424:route-table/rtb-00f702046df7eb0b6",
            "id": "rtb-00f702046df7eb0b6",
            "owner_id": "720560202424",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "magnolia-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "magnolia-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a99a95b00a1357b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.magnolia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03245dcdf9c2aef34",
            "route_table_id": "rtb-0ca34958c85c6d092",
            "subnet_id": "subnet-0572e34b70ca5f3c9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.magnolia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4741820a6dfd420",
            "route_table_id": "rtb-00f702046df7eb0b6",
            "subnet_id": "subnet-0affa18a633094006"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.magnolia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720560202424:subnet/subnet-0572e34b70ca5f3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0572e34b70ca5f3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "720560202424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "magnolia-dev-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "magnolia-dev-private"
            },
            "vpc_id": "vpc-0a99a95b00a1357b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magnolia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720560202424:subnet/subnet-0affa18a633094006",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0affa18a633094006",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "720560202424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "magnolia-dev-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "magnolia-dev-public"
            },
            "vpc_id": "vpc-0a99a95b00a1357b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magnolia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "magnolia_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:720560202424:vpc/vpc-0a99a95b00a1357b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07db3be5ffb7cdcce",
            "default_route_table_id": "rtb-00cff593383fcce28",
            "default_security_group_id": "sg-040c7c71482ef4122",
            "dhcp_options_id": "dopt-05177031ef202d8fa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a99a95b00a1357b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cff593383fcce28",
            "owner_id": "720560202424",
            "tags": {
              "Environment": "dev",
              "Name": "magnolia-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "magnolia-dev"
            }
          }
        }
      ]
    }
  ]
}